--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <!-- h1 -h6 -->
-<div><h1>There are different programing languages that involve web development</h1>
+<div>
+    <h1>There are different programing languages that involve web development</h1>
 </div>
 <body>
     
