--- a/index.html
+++ b/index.html
@@ -8,8 +8,80 @@
 <!-- h1 -h6 -->
 <div>
     <h1>There are different programing languages that involve web development</h1>
+    <h2>HTML</h2>
+    <p>HTML is the standard markup language for creating Web pages.</p>
+    <h2>CSS</h2>
+    <p>Cascading Style Sheets is a style sheet language used for describing the look and formatting of a document written in a markup language. </p>
+    <h2>Javascript</h2>
+    <p>JavaScript is a scripting or programming language that allows you to implement complex features on web pages</p>
+
 </div>
 <body>
+    <main>
+    <table></table>
+    <div class="row">
+        <div class="column"></div>
+        <div class="column"></div>
+        <div class="column"></div>
+    </div>
+    <table border="1">
+        <tr>
+            <th>First name </th>
+            <th>Last name</th>
+            <th>Age</th>
+            <th>Avatar</th>
+            <th>Favourite Colour</th>
+            <th>Wallpaper colour of the phone</th>
+            <th>School</th>
+
+        </tr>
+       
+            <tr>
+                <td>Candice</td>
+                <td>Keet</td>
+                <td>18</td>
+                <td>Harley Quinn</td>
+                <td>Murstad</td>
+                <td>Art</td>
+                <td>Life Choices Academy</td>
+            </tr>
+            <tr>
+                <td>Kaydeen</td>
+                <td>Hendricks</td>
+                <td>20</td>
+                <td>Eren Jager</td>
+                <td>Red</td>
+                <td>Himself</td>
+                <td>life Choices academy</td>
+            </tr>
+            <tr>
+                <td>Nazneen</td>
+                <td>Abrahams</td>
+                <td>19</td>
+                <td>Princess Bubblegum</td>
+                <td>Purple</td>
+                <td>Orange</td>
+                <td>Life Choices Academy</td>
+            </tr>
+            <tr>
+                <td>Jordan</td>
+                <td>Springveld</td>
+                <td>19</td>
+                <td>Dory</td>
+                <td>Pink</td>
+                <td>Blue</td>
+                <td>Life Choices Academy</td>
+            </tr>
+            <tr>
+                <td>Masoodah</td>
+                <td>George</td>
+                <td>18</td>
+                <td>Bobby</td>
+                <td>Purple</td>
+                <td>Black</td>
+                <td>Life Choices Academy</td>
+            </tr>
+    </main>
     
 </body>
 </html>
