--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
                 <td>Black</td>
                 <td>Life Choices Academy</td>
             </tr>
+    </table>
+            <ul>
+                <h2>What I've learned from Life Choices Academy</h2>
+                <h4>PEOPLE:</h4>
+                <li>I learned how to work with different people.</li>
+                <h4>LECTURER:</h4>
+                <li>From my lecturer I learned patience.</li>
+                <h4>OUTMOSPHERE:</h4>
+                <li>I learned that the outmosphere can be loving.</li>
+            </ul>
     </main>
     
 </body>
