--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                 <h4>OUTMOSPHERE:</h4>
                 <li>I learned that the outmosphere can be loving.</li>
             </ul>
+            <ol>
+                <h2>Short term goals</h2>
+                <li>Finishing my coding course in record time</li>
+                <li>Persuing career ambitions</li>
+                <li>Taking new hobbies</li>
+            </ol>
     </main>
     
 </body>
