--- a/index.html
+++ b/index.html
@@ -97,6 +97,48 @@
                 <li>Persuing career ambitions</li>
                 <li>Taking new hobbies</li>
             </ol>
+            <!-- modify this form HTML and place wherever you want your form -->
+<form
+action="https://formspree.io/f/xkndknqb"
+method="POST"
+>
+<label>
+  Name:
+  <input type="email" name="email">
+</label><br> 
+
+<label>
+  Surname:
+  <textarea name="message"></textarea>
+</label><br> 
+<label>
+    Date of Birth:
+    <textarea name="message"></textarea>
+  </label><br> 
+  <label>
+    Age:
+    <textarea name="message"></textarea>
+  </label><br> 
+  <label>
+    Gender:
+    <textarea name="message"></textarea>
+  </label><br> 
+  <label>
+    Nationality:
+    <textarea name="message"></textarea>
+  </label><br>
+  <label>
+    Ethnicity:
+    <textarea name="message"></textarea>
+  </label><br>
+  <label>
+    Year matriculated:
+    <textarea name="message"></textarea>
+  </label><br>   
+<!-- your other form fields go here -->
+<button type="submit">Send</button>
+</form>
+  
     </main>
     
 </body>
